--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"build:quickapp": "taro build --type quickapp",
 		"build:ui": "TARO_BUILD_TYPE=ui taro build --ui",
 		"build:rollup": "rollup --config ./config/rollup.config.js",
+		"release:weapp": "NODE_ENV=release npm run build:weapp -- --watch",
 		"dev:weapp": "npm run build:weapp -- --watch",
 		"dev:swan": "npm run build:swan -- --watch",
 		"dev:alipay": "npm run build:alipay -- --watch",
@@ -49,7 +50,7 @@
 		"release": "release-it --no-git.requireUpstream",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
 	},
-	"author": "lamaxs",
+	"author": "Lamaxs",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -61,32 +62,22 @@
 		}
 	},
 	"dependencies": {
-		"@tarojs/components": "3.0.11",
-		"@tarojs/router": "3.0.11",
-		"@tarojs/taro": "3.0.11",
-		"@tarojs/taro-alipay": "2.2.7",
-		"@tarojs/taro-h5": "2.2.7",
-		"@tarojs/taro-qq": "2.2.7",
-		"@tarojs/taro-quickapp": "2.2.7",
-		"@tarojs/taro-swan": "2.2.7",
-		"@tarojs/taro-tt": "2.2.7",
-		"@tarojs/taro-weapp": "2.2.7",
+		"@tarojs/components": "3.0.16",
+		"@tarojs/react": "3.0.16",
+		"@tarojs/runtime": "3.0.16",
+		"@tarojs/taro": "3.0.16",
 		"classnames": "^2.2.6",
-		"nerv-devtools": "^1.5.7",
 		"nervjs": "^1.5.7",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.8.0",
 		"@rollup/plugin-commonjs": "^14.0.0",
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^8.4.0",
-		"@tarojs/mini-runner": "3.0.11",
-		"@tarojs/plugin-babel": "2.1.0",
-		"@tarojs/plugin-csso": "2.1.0",
-		"@tarojs/plugin-sass": "2.1.0",
-		"@tarojs/plugin-uglifyjs": "2.1.0",
-		"@tarojs/webpack-runner": "3.0.11",
+		"@tarojs/mini-runner": "3.0.16",
+		"@tarojs/webpack-runner": "3.0.16",
 		"@types/classnames": "^2.2.9",
 		"@types/react": "^16.4.6",
 		"@types/webpack-env": "^1.13.6",
@@ -97,6 +88,7 @@
 		"babel-plugin-transform-jsx-stylesheet": "^0.6.5",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-taro": "3.0.16",
 		"conventional-changelog-cli": "^2.0.23",
 		"cz-conventional-changelog": "^3.0.2",
 		"eslint": "^5.16.0",
